Fix nav on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -310,27 +310,7 @@ p {
   position: relative;
   top: -1px;
 }
-/* =============================================================================
-   NAVIGATION
-   ========================================================================== */
-nav {
-  padding: 15px 0;
-  width: 100%;
-  z-index: 10;
-}
 
-nav .wrapper {
-  display: flex;
-  justify-content: center;
-}
-
-.nav-item {
-  display: inline-block;
-  margin-right: 15px;
-}
-.nav-link {
-  font-size: 1.4em;
-}
 /* =============================================================================
    HEADER
    ========================================================================== */
@@ -636,15 +616,6 @@ nav .wrapper {
   }
 }
 @media only screen and (max-width: 640px) {
-  /* nav */
-  nav {
-    position: relative;
-  }
-  nav .wrapper {
-    display: inline;
-    margin: 0 auto;
-    width: 960px;
-  }
   .header {
     padding: 20px 0;
   }
@@ -748,16 +719,30 @@ h6 {
    NAVIGATION
    ========================================================================== */
 nav {
+  align-items: center;
   background: #2b2b2b;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
   position: relative;
+  text-align: center;
+  width: 100%;
+  z-index: 10;
 }
-.nav-link {
+
+.nav-item {
   color: #e0e0e0;
+  display: inline-block;
+  margin-left: 7px;
+  margin-right: 7px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 1.4em;
 }
-.nav-link:active,
-.nav-link:hover,
-.nav-link:focus,
-.nav-link.current {
+.nav-item:active,
+.nav-item:hover,
+.nav-item:focus,
+.nav-item.current {
   color: #fff;
 }
 /* =============================================================================
